--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <input type="password" id="lpassword" name="password" required>
                 <i id="logineye" class="fa-solid fa-eye"></i>
             </div>
-            <button type="submit" class="submit">Sign Up</button>
+            <button type="submit" class="submit">Login</button>
         </form>
         <p id="logsignlink">Don't have an account? <a href="" id="toggleLink" onclick="change(event)">Sign Up</a></p>
     </div>
