--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </footer>
     <div id="datadiv">
         <div id="totalandQr">
-            <h3>Total Registerted User : <span id="count">350</span></h3>
+            <h3>Total Registered User : <span id="count">350</span></h3>
         </div>
         
         <div class="tablediv">
